--- a/CleanMeme/Base.lproj/Main.storyboard
+++ b/CleanMeme/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MemeTableViewCell" id="Av9-aI-t0r">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MemeTableViewCell" id="Av9-aI-t0r" customClass="MemeTableViewCell" customModule="CleanMeme" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Av9-aI-t0r" id="ons-YF-GNg">
@@ -134,7 +134,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="HtG-9u-Ckt" kind="show" identifier="ShowMeme" id="I4e-Lh-8Bh"/>
+                                    <segue destination="HtG-9u-Ckt" kind="show" identifier="ShowMeme" id="CeB-S5-iuZ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
